--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
     std_msgs  
+    geometry_msgs
     # Other packages containing msgs
 )
 
